# OOP_project

./: .gitignore  .qmake.stash  Assicurazioni.txt  CMakeLists.txt  Makefile  Project.pro  README.md  fileDiProva.txt  main.cpp  styleFile.qss
.github/workflows/: build.yml
App/: Home.cpp  Home.h  SpedizioneButton.cpp  SpedizioneButton.h  StatoSpedizioneButton.cpp  StatoSpedizioneButton.h
App/widgets/: CreaSpedizione.cpp  CreaSpedizione.h  Filiali.cpp  Filiali.h  Home.cpp  Home.h  SpedizioneWidget.cpp  SpedizioneWidget.h  SpedizioniTotali.cpp  SpedizioniTotali.h  StackTracer.cpp  StackTracer.h  myButton.cpp  myButton.h
App/widgets/CustomWidgets/: AddressWidget.cpp  AddressWidget.h  ListViewAssicurazioneItemWidget.cpp  ListViewAssicurazioneItemWidget.h  ListViewFilialeItemWidget.cpp  ListViewFilialeItemWidget.h  ListViewItemWidget.cpp  ListViewItemWidget.h  ListViewSpedizioniItemWidget.cpp  ListViewSpedizioniItemWidget.h  myButton.h
App/widgets/CustomWidgets/ListViewItemCustomWidget/: ListViewAssicurazioneItemWidget.h  ListViewFilialeItemWidget.h  ListViewSpedizioniItemWidget.cpp
App/widgets/CustomWidgets/PackageWidgetFolder/: PackageWidgetAssicurata.cpp  PackageWidgetAssicurata.h  PackageWidgetBase.cpp  PackageWidgetBase.h  PackageWidgetCargo.cpp  PackageWidgetPremium.cpp  PackageWidgetPremium.h
App/widgets/Pages/: Home.cpp  Home.h  SelezioneTipoPage.cpp  SelezioneTipoPage.h
App/widgets/Pages/HierachyPages/: HierachyPageInterface.cpp  HierachyPageInterface.h  SpedizioneAssicurataPage.cpp  SpedizioneAssicurataPage.h  SpedizionePremiumPage.h
App/widgets/Visitor/: Visitor.cpp  Visitor.h
App/windows/: Home.cpp  Home.h
Collection/: ArrayList.cpp  ArrayList.h
Librerie/: DataPersistence.cpp  FileManager.cpp  FileManager.h
Model/: Address.cpp  Address.h  Filiale.cpp  Filiale.h  Package.cpp  Package.h  Spedizione.cpp  Spedizione.h  SpedizionePremium.cpp  SpedizionePremium.h  Stato.cpp  Stato.h
Model/SupportClasses/: Address.h  Assicurazione.cpp  Assicurazione.h  Filiale.h  Package.cpp  Package.h
Model/hierarchy/: Spedizione.cpp  Spedizione.h  SpedizioneAssicurata.cpp  SpedizioneEconomica.cpp  SpedizioneInternazionale.cpp  SpedizioneInternazionale.h  SpedizionePremium.cpp  SpedizionePremium.h
Project.app/Contents/: Info.plist
Project.app/Contents/MacOS/: Project
src/App/widgets/: StackTracer.h
src/App/widgets/CustomWidgets/: AddressWidget.cpp  AddressWidget.h  MyButton.h  (+3 more)
src/Collection/: ArrayList.cpp  ArrayList.h
src/Librerie/: DataPersistence.cpp  DataPersistence.h  FileManager.cpp  FileManager.h  FileManagerJSON.cpp  FileManagerJSON.h
src/Model/SupportClasses/: Address.cpp  Address.h  Assicurazione.cpp  Assicurazione.h  Filiale.cpp  Filiale.h  Package.cpp  Package.h  Stato.cpp  Stato.h
src/Model/hierarchy/: Spedizione.cpp  Spedizione.h  SpedizioneAssicurata.cpp  SpedizioneAssicurata.h  SpedizioneCargo.cpp  SpedizioneCargo.h  SpedizioneEconomica.cpp  SpedizioneEconomica.h  SpedizioneInternazionale.cpp  SpedizioneInternazionale.h  SpedizionePremium.cpp  SpedizionePremium.h
src/SaveFiles/: Assicurazioni.json  Assicurazioni.txt  Filiali.json  Filiali.txt  JSON_SAVE.json  fileDiProva.txt
(+42 files in other folders)
